--- a/index.html
+++ b/index.html
@@ -1,1 +1,201 @@
-<!-- Agrega aquí la estructura HTML de tu sitio web -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Freelancer</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/main.css">
+  </head>
+  <body>
+    <!--Header section-->
+    <header class="montserrat">
+      <nav class="box-header">
+      <a href="#" class="title-header">START BOOTSTRAP</a>
+
+        <ul class="list-main">
+          <li><a href="#">PORTFOLIO</a></li>
+          <li><a href="#">ABOUT</a></li>
+          <li><a href="#">CONTACT</a></li>
+        </ul>
+      </nav>
+      </header>
+      <!--Main part section-->
+      <section id="main-part" class="montserrat">
+        <div class="container">
+        <figure>
+          <img src="assets/images/profile.png" alt="Start Bootstrap">
+        </figure>
+        <div class="intro-text">
+          <span class="name">START BOOTSTRAP</span>
+          <hr class="star-light">
+          <span class="specialties">Web Developer - Graphic Artist - User Experience Designer</span>
+        </div>
+        </div>
+      </section>
+
+   <!--Portfolio section-->
+      <section id="portfolio">
+        <div class="container">
+          <h2 class="text-center">PORTFOLIO</h2>
+          <hr class="star-black">
+
+          <div class="rows">
+            <div class="portfolio-item">
+              <figure>
+                <a href="#">
+                <img src="assets/images/portfolio/cabin.png" alt="Cabin">
+              </a>
+              </figure>
+            </div>
+
+            <div class="portfolio-item">
+              <figure>
+                <a href="#">
+                <img src="assets/images/portfolio/cake.png" alt="Cake">
+              </a>
+              </figure>
+            </div>
+
+            <div class="portfolio-item">
+              <figure>
+                <a href="#">
+                <img src="assets/images/portfolio/circus.png" alt="Circus">
+              </a>
+              </figure>
+            </div>
+
+            <div class="portfolio-item">
+              <figure>
+                <a href="#">
+                <img src="assets/images/portfolio/game.png" alt="Game">
+              </a>
+              </figure>
+            </div>
+
+            <div class="portfolio-item">
+              <figure>
+                <a href="#">
+                <img src="assets/images/portfolio/safe.png" alt="Safe">
+              </a>
+              </figure>
+            </div>
+
+            <div class="portfolio-item">
+              <figure>
+                <a href="#">
+                <img src="assets/images/portfolio/submarine.png" alt="Submarine">
+              </a>
+              </figure>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!--About section-->
+      <section id="about">
+        <div class="container">
+          <h2 class="text-center">ABOUT</h2>
+          <hr class="star-light">
+          <div class="rows">
+            <div class="column-1">
+              <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+            </div>
+            <div class="column-2">
+              <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+            </div>
+            <div class="button">
+              <a href="#">
+                <i class="fa fa-download" aria-hidden="true">Download Theme</i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!--Contact Section-->
+      <section class="contact">
+        <div class="container">
+          <h2 class="text-center">Contact Me</h2>
+          <hr class="star-black">
+          <div class="rows">
+            <div class="column-contact">
+
+              <form class="contact-form" action="index.html" method="post">
+
+                <div class="name">
+                  <label>Name</label>
+                  <input type="text" placeholder="Name">
+                  <p class="block-text"></p>
+                </div>
+
+                <div class="email">
+                  <label>Email Address</label>
+                  <input type="text" placeholder="Email Address">
+                  <p class="block-text"></p>
+                </div>
+
+                <div class="phone">
+                  <label>Phone Number</label>
+                  <input type="text" placeholder="Phone Number">
+                  <p class="block-text"></p>
+                </div>
+
+                <div class="message">
+                  <label>Meesage</label>
+                  <input type="text" placeholder="Message">
+                  <p class="block-text"></p>
+                </div>
+                <div class="send">
+                  <button type="submit" class="send-button">Send</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!--Footer-->
+      <footer class="text-center">
+        <div class="footer-above">
+          <div class="rows">
+            <div class="footer-column">
+              <h3>LOCATION</h3>
+              <p>3481 Melrose Place <br> Beverly Hills, CA 90210</p>
+            </div>
+            <div class="footer-column">
+              <h3>AROUND THE WEB</h3>
+              <ul class="list-inline">
+                <li class="list-inline-item"><a href="#">
+                  <i class="fa fa-facebook" aria-hidden="true"></i>
+                </a></li>
+                <li class="list-inline-item"><a href="#">
+                  <i class="fa fa-google-plus"></i>
+                </a></li>
+                <li class="list-inline-item"><a href="#">
+                  <i class="fa fa-twitter"></i>
+                </a></li>
+                <li class="list-inline-item"><a href="#">
+                  <i class="fa fa-linkedin"></i>
+                </a></li>
+                <li class="list-inline-item"><a href="#">
+                  <i class="fa fa-dribbble"></i>
+                </a></li>
+              </ul>
+            </div>
+            <div class="footer-column">
+              <h3>ABOUT FREELANCER</h3>
+              <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+            </div>
+          </div>
+        </div>
+        <div class="footer-down">
+          <div class="container">
+            <div class="rows">
+              <p>Copyright © Your Website 2017</p>
+            </div>
+          </div>
+        </div>
+      </footer>
+  </body>
+</html>
